--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,16 @@ android {
     dataBinding {
         enabled = true
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
+    implementation "androidx.room:room-runtime:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
+
+    kapt "androidx.room:room-compiler:2.3.0"
 
     implementation 'com.github.puskal-khadka:MultiSelectSpinner:1.0.1'
     implementation 'androidx.appcompat:appcompat:1.5.1'
