--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="br.com.italents.deliveryapp.DeliveryApplication"
+        android:name=".DeliveryApplication"
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -16,44 +15,52 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Androiddelivery"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name="br.com.italents.deliveryapp.ui.RegisterProductActivity"
+            android:name=".ui.FavoriteActivity"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.com.italents.deliveryapp.ui.HomeActivity" />
         </activity>
         <activity
-            android:name="br.com.italents.deliveryapp.ui.CartActivity"
+            android:name=".ui.RegisterProductActivity"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.com.italents.deliveryapp.ui.HomeActivity" />
         </activity>
         <activity
-            android:name="br.com.italents.deliveryapp.ui.ProductActivity"
+            android:name=".ui.CartActivity"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.com.italents.deliveryapp.ui.HomeActivity" />
         </activity>
         <activity
-            android:name="br.com.italents.deliveryapp.ui.HomeActivity"
+            android:name=".ui.ProductActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="br.com.italents.deliveryapp.ui.HomeActivity" />
+        </activity>
+        <activity
+            android:name=".ui.HomeActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value=".ui.Login" />
         </activity>
         <activity
-            android:name="br.com.italents.deliveryapp.ui.RegisterCustomerActivity"
+            android:name=".ui.RegisterCustomerActivity"
             android:exported="false">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.com.italents.deliveryapp.ui.HomeActivity" />
         </activity>
         <activity
-            android:name="br.com.italents.deliveryapp.ui.LoginActivity"
+            android:name=".ui.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
