--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.OrderActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="br.com.italents.deliveryapp.ui.HomeActivity" />
+        </activity>
+        <activity
             android:name=".ui.FavoriteActivity"
             android:exported="false">
             <meta-data
